be/src/rpc/thrift-util.cc
@@ -171,4 +171,10 @@ bool TNetworkAddressComparator(const TNetworkAddress& a, const TNetworkAddress& 
   if (cmp == 0) return a.port < b.port;
   return false;
 }
+
+bool IsTimeoutTException(const TException& e) {
+  // String taken from Thrift's TSocket.cpp
+  return strstr(e.what(), "EAGAIN (timed out)") != NULL;
+}
+
 }
