be/src/statestore/statestore.h
@@ -394,9 +394,15 @@ class Statestore {
 
   ThreadPool<ScheduledSubscriberUpdate> subscriber_heartbeat_threadpool_;
 
-  // Cache of subscriber clients. Only one client per subscriber should be used, but the
-  // cache helps with the client lifecycle on failure.
-  boost::scoped_ptr<ClientCache<StatestoreSubscriberClient> > client_cache_;
+  // Cache of subscriber clients used for UpdateState() RPCs. Only one client per
+  // subscriber should be used, but the cache helps with the client lifecycle on failure.
+  boost::scoped_ptr<ClientCache<StatestoreSubscriberClient> > update_state_client_cache_;
+
+  // Cache of subscriber clients used for Heartbeat() RPCs. Separate from
+  // update_state_client_cache_ because we enable TCP-level timeouts for these calls,
+  // whereas they are not safe for UpdateState() RPCs which can take an unbounded amount
+  // of time.
+  boost::scoped_ptr<ClientCache<StatestoreSubscriberClient> > heartbeat_client_cache_;
 
   // Thrift API implementation which proxies requests onto this Statestore
   boost::shared_ptr<StatestoreServiceIf> thrift_iface_;
